fixed font Cross-Origin error fetching from google fonts not looks the same on firefox

--- a/css/SFcrime.css
+++ b/css/SFcrime.css
@@ -1,16 +1,31 @@
-@import url('http://fonts.googleapis.com/css?family=Open+Sans');
-@import url('http://fonts.googleapis.com/css?family=Oswald');
-
 @font-face {
    font-family: 'Open Sans';  
-   src: url("http://fonts.googleapis.com/css?family=Open+Sans:bold");
+   src: local('Open Sans'), local('OpenSans'), url(http://fonts.gstatic.com/s/opensans/v10/cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+   font-style: normal;  /* Associates values of "bold" with this resource. */
+   font-weight: normal;  
+}
+
+@font-face {
+   font-family: 'Open Sans Bold';  
+   src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://fonts.gstatic.com/s/opensans/v10/k3k702ZOKiLJc3WVjuplzOgdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
    font-style: bold;  /* Associates values of "bold" with this resource. */
    font-weight: normal;  
 }
 
 @font-face {
-   font-family: 'Oswald';  
-   src: url("http://fonts.googleapis.com/css?family=Oswald:bold");
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Oswald Regular'), local('Oswald-Regular'), url(http://fonts.gstatic.com/s/oswald/v10/pEobIV_lL25TKBpqVI_a2w.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
+@font-face {
+   font-family: 'Oswald Bold';  
+   src: local('Oswald Bold'), local('Oswald-Bold'), url(http://fonts.gstatic.com/s/oswald/v10/bH7276GfdCjMjApa_dkG6VtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
    font-style: bold;  /* Associates values of "bold" with this resource. */
    font-weight: normal;  
 }
@@ -113,8 +128,7 @@ p {
 .district_labels{
  color: white;
  background-color: transparent;
- font-family: "Oswald", "Arial", sans-serif;
- font-style: bold;
+ font-family: "Oswald Bold", "Arial", sans-serif;
  text-align: center;
  width: 100px;     
  white-space: nowrap;
@@ -147,6 +161,5 @@ p {
 }
 
 .infowindow>div>span, .bio-window>div>span{
-	font-family: 'Oswald';
-	font-style: bold;
+	font-family: 'Oswald Bold';
 }
